src/objects/C501_HH_Income_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to store the variables for calculating HH Income Level- update as requirements change</description>
    <fields>
        <fullName>C501_Additional_Amount__c</fullName>
        <description>Taken from https://aspe.hhs.gov/poverty-guidelines - the amount to added to the base for each additional person in the household. Used in the HH Income Level formula on HH Accounts</description>
        <inlineHelpText>Enter the amount added to the base for each additional HH member - typically found here: https://aspe.hhs.gov/poverty-guidelines</inlineHelpText>
        <label>Additional Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C501_Base_Level__c</fullName>
        <description>Based on https://aspe.hhs.gov/poverty-guidelines</description>
        <inlineHelpText>Enter the base federal poverty level for a one-person HH in the Lower 48 States - typically found here: https://aspe.hhs.gov/poverty-guidelines</inlineHelpText>
        <label>Base Level</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>C501_Last_Updated_Date__c</fullName>
        <description>Used to track when the settings are updated</description>
        <inlineHelpText>Enter the date on which you verified or updated these values</inlineHelpText>
        <label>Last Updated Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>HH Income Settings</label>
</CustomObject>